@@ -1,5 +1,6 @@
 2003-11-04  Sam Steingold  <sds@gnu.org>
 
+	* array.d, eval.d, sequence.d, spvw_debug.d: do not shadow index(3)
 	* spvw_memfile.d: do not shadow local variables
 
 2003-11-04  Bruno Haible  <bruno@clisp.org>
